syntax = "proto3";
package blog.admin;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blog/admin/params.proto";
import "blog/admin/admin.proto";
// this line is used by starport scaffolding # 1

option go_package = "blog/x/admin/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/blog/admin/params";
  }
  // Queries a list of Admins items.
	rpc Admins(QueryAdminsRequest) returns (QueryAdminsResponse) {
		option (google.api.http).get = "/blog/admin/admins";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAdminsRequest {
    cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAdminsResponse {
    repeated Admin Admin = 1;
    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
